# cool-compiler-rust-monorepo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md
crates/cool_codegen/: Cargo.toml
crates/cool_codegen/src/: abi.rs  emit.rs  lib.rs  lowering.rs
crates/cool_codegen/tests/: codegen_smoke.rs
crates/cool_frontend/: Cargo.toml
crates/cool_frontend/src/: ast.rs  lexer.rs  lib.rs  parser.rs  typechecker.rs
crates/cool_parse_cli/: Cargo.toml
crates/cool_parse_cli/src/: main.rs
crates/cool_runtime/: Cargo.toml
crates/cool_runtime/src/: gc.rs  lib.rs  rt_print.rs
crates/coolc/: Cargo.toml
crates/coolc/src/: main.rs
examples/: bad.cl  hello.cl
examples/arithmetic/: add_chain.cl  add_mul.cl  div_left_assoc.cl  div_mul_left.cl  literal.cl  mul_add.cl  mul_before_sub.cl  sub_left_assoc.cl
examples/arithmetic/unsupported/: parens.cl
tests/e2e/: README.md  conftest.py  pyproject.toml  test_arithmetic.py  test_examples.py
